# MediaApiStudy

./: README.md  build.gradle  readme  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/zph/media/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitstream.c  encoder.c  fft.c  native-lib.cpp  psymodel.c  util.h  zphlame.c  zphlame.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: crc.h
app/src/main/cpp/include/libswresample/: swresample.h  version.h
app/src/main/java/com/zph/media/: MainActivity.kt
app/src/main/java/com/zph/media/append/api/: AndroidAudioApiActivity.kt  AndroidMediaApiActivity.kt  MediaCodecActivity.kt  MediaExtractorActivity.kt  MediaMuxerActivity.kt
app/src/main/java/com/zph/media/append/api/audio/: AudioWaveformActivity.kt  LameTestActivity.kt
app/src/main/java/com/zph/media/append/api/audio/view/: AudioTrackManager.kt  AudioWaveView.kt  WaveformView.kt
app/src/main/java/com/zph/media/append/api/camera2/: AutoFitTextureView.kt  Camera2Test1Activity.kt  CompareSizesByArea.kt
app/src/main/java/com/zph/media/append/api/camera2/base/: BaseCamera2Helper.kt  Camera2SurfaceHelper.kt  Camera2TextureHelper.kt
app/src/main/java/com/zph/media/append/api/camera2/fragment/: Camera2VideoFragment.kt  FragmentCamera2NV21.kt  FragmentCamera2SurfaceView.kt  FragmentCamera2Video.kt  TestFragment.kt
app/src/main/java/com/zph/media/append/api/codec/: MediaCodecActivity.kt
app/src/main/java/com/zph/media/append/api/codec/runnable/: AudioDecodeRunnable.kt  AudioEncodeRunnable.kt
app/src/main/java/com/zph/media/append/apireadme/: MediaCodec_ReadMe  MediaExtractor_ReadMe  MediaMuxerReadMe
app/src/main/java/com/zph/media/append/bezier_curve/: BezierCurveActivity.kt  DrawQuadToView.kt
app/src/main/java/com/zph/media/append/ffmpeg/: FfmpegOneActivity.kt
app/src/main/java/com/zph/media/append/gpuimage/: GalleryActivity.kt  GpuImageTestActivity.kt  GupCameraActivity.kt
app/src/main/java/com/zph/media/append/gpuimage/utils/: Camera2Loader.kt  GPUImageFilterTools.kt
app/src/main/java/com/zph/media/append/ndk/: NdkTest1Activity.kt
app/src/main/java/com/zph/media/append/opengles/: TriangleActivity.kt
app/src/main/java/com/zph/media/append/opengles/drawer/: IDrawer.kt  TriangleDrawer.kt
app/src/main/java/com/zph/media/append/opengles/render/: FGLRender.kt  FGLView.kt  Shape.kt  SimpleRender.kt
app/src/main/java/com/zph/media/append/splash/: SplashActivity.kt
app/src/main/java/com/zph/media/append/webrtc/: WebRtcActivity.kt
app/src/main/java/com/zph/media/application/: MyApplication.kt
app/src/main/java/com/zph/media/base/: BaseActivity.kt  BaseAdapter.kt  BaseHolder.kt
app/src/main/java/com/zph/media/config/: AudioConfig.kt  Constants.kt
app/src/main/java/com/zph/media/extensions/: CommonExtensions.kt
app/src/main/java/com/zph/media/home/: Test.kt
app/src/main/java/com/zph/media/home/adapter/: AdapterGridHome.kt
app/src/main/java/com/zph/media/other/: OtherActivity.kt
app/src/main/java/com/zph/media/util/: AudioCodec.kt  BitmapUtils.kt  CameraUtil.kt  FileUtil.kt  ImageUtil.kt  JsonParser.kt  Mp3Encoder.kt  NDKTestUtils.kt  OpenGLTools.kt  PcmToWavUtil.kt  ToastUtil.kt  ZPHLameUtils.java
app/src/main/java/com/zph/media/view/: MyTextureView.kt  ResizeAbleSurfaceView.kt  TouchButton.kt
app/src/main/res/drawable/: ic_icon_svg.xml  ic_svg_back.xml  ic_svg_media_1.xml  ic_svg_wy.xml  ic_svg_yuan.xml  ic_svg_zc.xml  ic_svg_zx_xl.xml  shape_buttom_center_8.xml
app/src/main/res/drawable-xxxhdpi-v4/: app_v_3_3_jiaoyii_caidans_day.xml  app_v_3_3_jiaoyii_hangqing_day.xml  app_v_3_3_jiaoyii_shezhi_day.xml  ic_contract_n_day.xml  ic_contract_p_day.xml  ic_home_n_day.xml  ic_home_p_day.xml  ic_market_n_day.xml  ic_market_p_day.xml  ic_money_n_day.xml  ic_money_p_day.xml  ic_trading_n_day.xml  ic_trading_p_day.xml  icon_share_day.xml
app/src/main/res/layout/: activity_android_audio_api.xml  activity_android_media_api.xml  activity_audio_waveform.xml  activity_bezier_curve.xml  activity_camera2_test1.xml  activity_ffmepg_one.xml  activity_gallery.xml  activity_gpu_image_test.xml  activity_gup_camera.xml  activity_lame_test.xml  activity_main.xml  activity_media_codec.xml  activity_media_extractor.xml  activity_media_muxer.xml  activity_ndk_test1.xml  activity_other.xml  activity_splash.xml  activity_triangle.xml  activity_web_rtc.xml  fragment_camera2_surface_view.xml  fragment_camera2_video.xml  fragment_camera2_video2.xml  fragment_test.xml  layout_gridview_home_item.xml  layout_navi.xml  layout_zx_buttom.xml  layout_zx_top.xml
app/src/main/res/shader/: test_frag_shader.glsl  test_pos_shader.glsl
app/src/main/res/values/: attrs_touch_btn.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/zph/media/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
